// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composant IconeStatut > doit rendre l'icône PendingActions pour le statut 'À signer' 1`] = `
<svg
  aria-hidden="true"
  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ml-1 h-5 w-5 css-1umw9bq-MuiSvgIcon-root"
  data-testid="CreateOutlinedIcon"
  focusable="false"
  viewBox="0 0 24 24"
>
  <path
    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM5.92 19H5v-.92l9.06-9.06.92.92zM20.71 5.63l-2.34-2.34c-.2-.2-.45-.29-.71-.29s-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83c.39-.39.39-1.02 0-1.41"
  />
</svg>
`;

exports[`Composant IconeStatut > doit rendre l'icône Update pour le statut 'En traitement' 1`] = `
<svg
  aria-hidden="true"
  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ml-1 h-5 w-5 css-1umw9bq-MuiSvgIcon-root"
  data-testid="UpdateIcon"
  focusable="false"
  viewBox="0 0 24 24"
>
  <path
    d="M21 10.12h-6.78l2.74-2.82c-2.73-2.7-7.15-2.8-9.88-.1-2.73 2.71-2.73 7.08 0 9.79s7.15 2.71 9.88 0C18.32 15.65 19 14.08 19 12.1h2c0 1.98-.88 4.55-2.64 6.29-3.51 3.48-9.21 3.48-12.72 0-3.5-3.47-3.53-9.11-.02-12.58s9.14-3.47 12.65 0L21 3zM12.5 8v4.25l3.5 2.08-.72 1.21L11 13V8z"
  />
</svg>
`;

exports[`Composant IconeStatut > ne doit rien rendre pour un statut non reconnu 1`] = `null`;
